[tool.poetry]
name = "blktrace-to-influx"
version = "0.1.0"
description = ""
authors = ["Kristian Koehntopp <kris-git@koehntopp.de>"]
readme = "README.md"
packages = [{include = "blktrace_to_influx"}]

scripts = { blkflux = "blktrace_to_influx.cli:cli"}

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
